--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <h1>My Coding Journey</h1>
+        <h3>Devin Sullins</h3>
+    </header>
     <section>
-    <h1>My Coding Journey</h1>
     <h2>The Beginning</h2>
     <p>My first foray into programming was in high school. I was chosen to participate in an engineering camp at Missouri S&T in Rolla, MO. There, I learned a lot about engineering and other STEM fields, one of which being programming.
     During the programming course, we were taught to program a small circuit board with lights and a rudimentary speaker to play different games. We also programmed a simple tank game in the computer
