--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Devin's Coding Journey</title>
 </head>
 <body>
     <header>
@@ -41,5 +41,6 @@
         <li>Transition to a job, either with my company or another, using the skills I'm learning in LC101</li>
     </ul>
     </section>
+    <footer>If you'd like to hire me, email me at devinsullins@gmail.com</footer>
 </body>
 </html>
