added main tags

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h1>My Coding Journey</h1>
         <h3>Devin Sullins</h3>
     </header>
+    <main>
     <section>
     <h2>The Beginning</h2>
     <p>My first foray into programming was in high school. I was chosen to participate in an engineering camp at Missouri S&T in Rolla, MO. There, I learned a lot about engineering and other STEM fields, one of which being programming.
@@ -41,6 +42,7 @@
         <li>Transition to a job, either with my company or another, using the skills I'm learning in LC101</li>
     </ul>
     </section>
-    <footer>If you'd like to hire me, email me at devinsullins@gmail.com</footer>
+    </main>
+    <footer>For more information, or to hire me, email me at devinsullins@gmail.com</footer>
 </body>
 </html>
