--- a/index.html
+++ b/index.html
@@ -48,11 +48,13 @@
         </section>
     </main>
         <section>
+            <p>Have some suggestions for what I should do next?</p>
             <form>
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name">
                 <label for="Advice">Advice:</label>
-                <input type="text" id="advice" name="advice">
+                <!-- <input type="text" id="advice" name="advice"> -->
+                <textarea name="advice" id="Advice" cols="30" rows="10">Give me some advice!</textarea>
             </form>
         </section>
     <footer>
