--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 <label for="Advice">Advice:</label>
                 <!-- <input type="text" id="advice" name="advice"> -->
                 <textarea name="advice" id="Advice" cols="30" rows="10">Give me some advice!</textarea>
+                <input type="submit" value="Submit">
             </form>
         </section>
     <footer>
