changed footer message and padding on goals section

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </form>
         </section>
     <footer class="main">
-        <p>For more information, or to hire me, email me at devinsullins@gmail.com</p>
+        <p>For more information, or to hire me, fill out the Advice form above!</p>
         <p>&copy; Devin Sullins 2020</p>
     </footer>
 </body>
