changed specific date to month

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <section id="story">
             <h2>The Future?</h2>
             <img src="https://wallpaperaccess.com/full/755557.jpg" alt="Mad Max Fury Road, or a possible future">
-            <p>It's very difficult to plan for the future right now. It's currently November 24th, 2020 and we've been in the midst of a pandemic for almost a year now. In America, we just finished a very contentious election season and a summer and fall filled with protests and rioting, both due to the rise of oppression and bigotry (and the normalization of those things) in our country.</p>
+            <p>It's very difficult to plan for the future right now. It's currently November and we've been in the midst of a pandemic for almost a year now. In America, we just finished a very contentious election season and a summer and fall filled with protests and rioting, both due to the rise of oppression and bigotry (and the normalization of those things) in our country.</p>
             <p>All that said, this year has been one of the best years of my life. I got engaged. I got serious about programming and making a change in my life. I had a great year in spite of all of the chaos and tragedy in our world. I'm hoping to continue that trend in 2021 but, like this year, I'll be grateful just to make it to the end.</p>
         </section>
         <section id="goals">
