first commit december 3

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <br><br>
                 <label for="advice">Advice:</label>
                 <!-- <input type="text" id="advice" name="advice"> -->
-                <textarea name="advice" id="advice" cols="30" rows="10">Give me some advice!</textarea>
+                <textarea name="advice" id="advice" cols="30" rows="10">This form won't do anything without Javascript!</textarea>
                 <br><br>
                 <input type="submit" value="Submit">
             </form>
