added background, fixed styling

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css">
     <title>Devin's Coding Journey</title>
 </head>
-<body>
+<body >
+    
     <header>
         <h1>My Coding Journey</h1>
         <h3>Devin Sullins</h3>
@@ -15,7 +16,7 @@
     <main class="main">
         <section id="story">
             <h2>The Beginning</h2>
-            <img src="https://p19cdn4static.sharpschool.com/UserFiles/Servers/Server_750728/Templates/logon.png" alt="West Platte School Seal">
+            <img id="wpLogo" src="https://p19cdn4static.sharpschool.com/UserFiles/Servers/Server_750728/Templates/logon.png" alt="West Platte School Seal">
             <p>My first foray into &quot;programming&quot; was in high school. I was chosen to participate in an engineering camp at Missouri S&T in Rolla, MO. There, I learned a lot about engineering and other STEM fields, one of which being programming.
             During the programming course, we were taught to program a small circuit board with lights and a rudimentary speaker to play different games. We also programmed a simple tank game in the computer
             Looking back, it was all very fascinating and I still can't see why I decided not to pursue any of the things I learned on that trip.</p>
